<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <!-- TODO: Make this a metapackage, see
       https://github.com/ros2/ros2/issues/408 -->
  <name>ros2_ign</name>
  <version>0.1.0</version>
  <description>Meta-package containing interfaces for using ROS 2 with <a href="https://ignitionrobotics.org">Ignition</a> simulation.</description>
  <license>Apache 2.0</license>
  <maintainer email="louise@openrobotics.org">Louise Poubel</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2_ign_bridge</exec_depend>
  <exec_depend>ros2_ign_gazebo_demos</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
